force-app/main/default/objects/Staged_Prospective_Student__c.object
<CustomObject>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>Total number of attendees of the Prospective Student Event Campaign Members. This value would be propagated to all added Event Campaign Members of the Prospective Student.</description>
        <inlineHelpText>Total number of attendees of the Prospective Student Event Campaign Members.</inlineHelpText>
        <label>Number of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Email__c</fullName>
        <description>Parent or Guardian Email of Prospective Student Lead.</description>
        <inlineHelpText>Parent or Guardian Email of Prospective Student Lead.</inlineHelpText>
        <label>Parent / Guardian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_First_Name__c</fullName>
        <description>Parent or Guardian First Name of Prospective Student Lead.</description>
        <inlineHelpText>Parent or Guardian First Name of Prospective Student Lead.</inlineHelpText>
        <label>Parent / Guardian First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Last_Name__c</fullName>
        <description>Parent or Guardian First Name of Prospective Student Lead.</description>
        <inlineHelpText>Parent or Guardian First Name of Prospective Student Lead.</inlineHelpText>
        <label>Parent / Guardian Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Mobile__c</fullName>
        <description>Parent or Guardian Mobile of Prospective Student Lead.</description>
        <inlineHelpText>Parent or Guardian Mobile of Prospective Student Lead.</inlineHelpText>
        <label>Parent / Guardian Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Number of the Prospective Student Contact.</description>
        <inlineHelpText>Phone Number of the Prospective Student Contact.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Country_of_Study__c</fullName>
        <description>Indicates the Prospective Student&apos;s preferred country of study. This is required to implicitly identify Student Type</description>
        <label>Preferred Country of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Course_Unknown__c</fullName>
        <description>String value of Boolean to determine whether the Prospective Student has provided the list of interested courses. Storing as text for the purpose of determining null from true/false, and other potential Boolean value from integration such as 1,0,T,F</description>
        <inlineHelpText>Determine whether the Prospective Student has provided the list of interested courses.</inlineHelpText>
        <label>Preferred Course Unknown?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Salutation of the Prospective Student Contact.</description>
        <inlineHelpText>Salutation of the Prospective Student Contact.</inlineHelpText>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_School__c</fullName>
        <description>Secondary School of Prospective Student Lead</description>
        <inlineHelpText>Secondary School of Prospective Student Lead.</inlineHelpText>
        <label>Secondary School</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seeking_information_for__c</fullName>
        <description>Prospect is seeking information for?</description>
        <inlineHelpText>Prospect is seeking information for?</inlineHelpText>
        <label>Seeking information for</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>Selected session of the Prospective Student Event Campaign Members. This value would be propagated to all added Event Campaign Members of the Prospective Student.</description>
        <inlineHelpText>Selected session of the Prospective Student Event Campaign Members.</inlineHelpText>
        <label>Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Study_Area__c</fullName>
        <description>Specific Study Area of Prospective Student Lead.</description>
        <inlineHelpText>Specific Study Area of Prospective Student Lead.</inlineHelpText>
        <label>Specific Study Area</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Processing status of the Staged Prospective Student.</description>
        <inlineHelpText>Processing status of the Staged Prospective Student.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Re-process</fullName>
                </value>
                <value>
                    <fullName>Fatal Error</fullName>
                </value>
                <value>
                    <fullName>Partial Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_type__c</fullName>
        <description>Student Type of Prospective Student Lead.</description>
        <inlineHelpText>Student Type of Prospective Student Lead.</inlineHelpText>
        <label>Student type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Domestic Malaysia</fullName>
                </value>
                <value>
                    <fullName>International Malaysia</fullName>
                </value>
                <value>
                    <fullName>Domestic Indonesia</fullName>
                </value>
                <value>
                    <fullName>International Indonesia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Funded_By__c</fullName>
        <description>Funding plans of the Prospective Student Lead.</description>
        <inlineHelpText>Funding plans of the Prospective Student Lead.</inlineHelpText>
        <label>Funding Plans</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
                <value>
                    <fullName>I am funding my studies</fullName>
                </value>
                <value>
                    <fullName>My parents are funding my studies</fullName>
                </value>
                <value>
                    <fullName>I already have a scholarship</fullName>
                </value>
                <value>
                    <fullName>I am looking for a scholarship</fullName>
                </value>
                <value>
                    <fullName>I need a scholarship</fullName>
                </value>
                <value>
                    <fullName>My employer (private company) is funding my studies</fullName>
                </value>
                <value>
                    <fullName>My government is funding my studies / BUMN (State Owned Corporation)</fullName>
                </value>
                <value>
                    <fullName>My government is funding my studies / LPDP</fullName>
                </value>
                <value>
                    <fullName>My government is funding my studies / Australia Awards</fullName>
                </value>
                <value>
                    <fullName>My government is funding my studies / Ministry Offices</fullName>
                </value>
                <value>
                    <fullName>My government is funding my studies / Other</fullName>
                </value>
                <value>
                    <fullName>I need a full scholarship from Monash University</fullName>
                </value>
                <value>
                    <fullName>A combination of funds from myself and my employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Level__c</fullName>
        <description>Study Level of Prospective Student Lead.</description>
        <inlineHelpText>Study Level of Prospective Student Lead.</inlineHelpText>
        <label>Study Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Postgraduate</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>Foundation Year</fullName>
                </value>
                <value>
                    <fullName>Graduate Coursework</fullName>
                </value>
                <value>
                    <fullName>Graduate research</fullName>
                </value>
                <value>
                    <fullName>Undergraduate education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Lists__c</fullName>
        <description>Subscriptions Lists to subscribe the Prospective Student Lead with as Subscription Member. 
Expected format : Line separated Campaign IDs.</description>
        <inlineHelpText>Subscriptions Lists to subscribe the Prospective Student Lead with as Subscription Member.</inlineHelpText>
        <label>Subscription Lists</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Lead_Source__c</fullName>
        <description>Web Lead Source of the Prospective Student Event Campaign Members. This value would be propagated to all added Event Campaign Members of the Prospective Student. Used to track GA source.</description>
        <inlineHelpText>Web Lead Source of the Prospective Student Event Campaign Members.</inlineHelpText>
        <label>Web Lead Source</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>is_Monash_Scholars_Text__c</fullName>
        <description>Text version of Monash Scholars checkbox being mapped to Lead. This is to cater incoming values from webforms such as (T, True, 1 for true / F, False, 0 for false)</description>
        <inlineHelpText>Monash Scholars checkbox being mapped to Lead.</inlineHelpText>
        <label>Monash Scholars</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Student_Extension_Text__c</fullName>
        <description>Text version of Student Extension checkbox being mapped to Lead. This is to cater incoming values from webforms such as (T, True, 1 for true / F, False, 0 for false)</description>
        <inlineHelpText>Student Extension checkbox being mapped to Lead.</inlineHelpText>
        <label>Student Extension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Synchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Lead Explosion should run in a Synchronous context or not</description>
        <inlineHelpText>Indicates whether Lead Explosion should run in a Synchronous context or not.</inlineHelpText>
        <label>is Synchronous</label>
        <type>Checkbox</type>
    </fields>
    <label>Staged Prospective Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Exploding_Leads_V2__c</columns>
        <columns>Acquisition_Source_Campaign__c</columns>
        <columns>Email__c</columns>
        <columns>Exploded_Target__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Records</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Acquisition_Source_Campaign__c</columns>
        <columns>Event_Campaigns__c</columns>
        <columns>Broad_Area_of_Interest_Update_Mode__c</columns>
        <columns>Exploded_Target__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Success</value>
        </filters>
        <label>Pending Records</label>
    </listViews>
    <nameField>
        <displayFormat>SPS-{0}</displayFormat>
        <label>Staged Prospective Student Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staged Prospective Students</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Matching_keys_required</fullName>
        <active>true</active>
        <description>if Exploded Target (Contact ID) is empty, First Name, Last Name, and Email is required. Matching Keys (FN,LN,Email) will be used to determine the matching Contact</description>
        <errorConditionFormula>IF( 
 	ISBLANK( Exploded_Target__c ),
 	OR(
 		ISBLANK( First_Name__c ),
 		ISBLANK( Last_Name__c ),
 		ISBLANK( Email__c )
 	), 
 	false
)</errorConditionFormula>
        <errorMessage>First Name, Last Name, and Email is required if Exploded Target is blank</errorMessage>
    </validationRules>
</CustomObject>